2000-06-05 22:25:12  Shenghuo ZHU  <zsh@cs.rochester.edu>

	* gnus-cache.el (gnus-cache-possibly-enter-article): Bind coding
	system.
	* gnus-soup.el (gnus-soup-write-prefixes): Ditto.
	* gnus-start.el (gnus-slave-save-newsrc): Ditto.
	* gnus-util.el (gnus-output-to-rmail): Ditto.
	(gnus-output-to-mail): Ditto.
	(gnus-write-buffer): Ditto.
	* gnus-uu.el (gnus-uu-save-article): Ditto.

2000-06-04 15:05:16  Shenghuo ZHU  <zsh@cs.rochester.edu>

	* message.el (message-read-from-minibuffer): Typo.

2000-06-03 13:36:46  Shenghuo ZHU  <zsh@cs.rochester.edu>

	* gnus-art.el (article-decode-charset): Override non-MIME forward
	charset.

2000-06-02 12:04:26  Shenghuo ZHU  <zsh@cs.rochester.edu>

	* mml.el (mml-quote-region): Correct the regexp.
	* gnus-msg.el (gnus-summary-reply): mml-quote it.

2000-06-02 11:57:15  Shenghuo ZHU  <zsh@cs.rochester.edu>

	* message.el (message-forward): Insert raw text.
	* mml.el (mml-parse-1): Get raw text in unibyte mode.
	(mml-generate-mime-1): Insert raw text in unibyte mode.

2000-06-01  Florian Weimer  <fw@deneb.cygnus.argh.org>

	* mm-bodies.el (mm-body-encoding): Always encoded if
	`mm-use-ultra-safe-encoding' is set.

2000-05-31 14:50:52  Shenghuo ZHU  <zsh@cs.rochester.edu>

	* mml.el (ange-ftp-name-format): Typo.

2000-05-30  Simon Josefsson  <jas@pdc.kth.se>

	* gnus-start.el (gnus-get-unread-articles): If
	`gnus-activate-group' and/or `gnus-check-server' return nil, don't
	try to do anything on that server.
	
2000-05-25  Simon Josefsson  <jas@pdc.kth.se>

	* gnus-group.el (gnus-group-nnimap-edit-acl): Help text updated
	from latest draft.

2000-05-08  Simon Josefsson  <jas@pdc.kth.se>

	* gnus-group.el (gnus-group-expire-articles-1): Make sure server
	is open.

2000-05-24  Dave Love  <fx@gnu.org>

	* mml.el (mml-parse-file-name): Fix ange-ftp part.

2000-05-22  Didier Verna  <didier@lrde.epita.fr>

	* gnus.el (gnus-redefine-select-method-widget): new function, call
	it once. Add an "other" entry for unknown but editable backend